objects/Apttus_Approval__Approval_Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Exception_Description__c</fullName>
        <label>Exception Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Governor_Limit_in_Executing_Code__c</fullName>
        <label>Governor Limit in Executing Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Runnings_User_Id__c</fullName>
        <label>Runnings User Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Approval Exception Log</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ELOG-{00000000}</displayFormat>
        <label>Approval Exception Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>